# pyminitel

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: aplhanumerical.py  attributs.py  layout.py  minitel.py  mode.py  visualization_module.py
src/examples/: GUIDE_VGP5_.VDT  PAGE_VGP2_.VDT  PAGE_VGP5_.VDT  dumb_minitel_client.py  echo_client.py  guide.py  haikus.py  helldivers.py  helldivers_api.py  helldivers_refresher.py  index.py  iss.py  iss_api.py  iss_refresher.py  lethal.py  lorem_ipsum.py  main.py  marnie.py  nostromo.py  page.py  page_tcp.py  png_to_semigraphic.py  rainbow.py  run_all_examples.py  test.py  videotex_arduino_page_generator.py  videotex_guide_page_generation.py  videotex_helldivers_page_generation.py  videotex_index_page_generation.py  videotex_iss_page_generation.py  videotex_page_generation.py  xenas.py
src/examples/ressources/: ARDUINO_BRIDGE.VDT  ARDUINO_VGP5_.VDT  EARTH_MAP.VDT  FOX_LEFT.VDT  FOX_RIGHT.VDT  GUIDE_VGP2_.VDT  GUIDE_VGP5_.VDT  HAIKU.VDT  HELLDIVERS_SG.VDT  HELLDIVERS_VGP2_.VDT  HELLDIVERS_VGP5_.VDT  INDEX_VGP5_.VDT  ISS_VGP2_.VDT  ISS_VGP5_.VDT
src/pyminitel/: alphanumerical.py  attributes.py  attributs.py  comm.py  connector.py  din.py  keyboard.py  layout.py  minitel.py  mode.py  page.py  screen_buffer.py  videotex.py
tools/: paint-like.py  semi_graphics_generator.py  semi_graphics_generator.spec
